--- a/index.html
+++ b/index.html
@@ -19,8 +19,6 @@
 </head>
 <body>
   <h1><a href="index.html">WEB</a></h1>
-  <input type="button" value="night" onclick="
-  nightDayHandler(this)">
   <div id="grid">
     <ol>
       <li><a href="1.html">HTML</a></li>
@@ -28,6 +26,8 @@
       <li><a href="3.html">JavaScript</a></li>
     </ol>
     <div id="article">
+      <div class="mode"><input type="button" value="night" onclick="
+        nightDayHandler(this)"></div>
       <h2>Welcome</h2>
       <p>The World Wide Web (WWW), commonly known as the Web, is an information system where documents and other web resources are identified by Uniform Resource Locators (URLs, such as https://example.com/), which may be interlinked by hypertext,
         and are accessible over the Internet.[1][2] The resources of the Web are transferred via the Hypertext Transfer Protocol (HTTP) and may be accessed by users by a software application called a web browser and are published by a software
@@ -42,11 +42,11 @@
      *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
      *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
     /*
-      var disqus_config = function () {
-      this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-      this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-    };
-    */
+        var disqus_config = function () {
+        this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+        this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+      };
+      */
     (function() { // DON'T EDIT BELOW THIS LINE
       var d = document,
         s = d.createElement('script');
